--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -118,7 +118,7 @@ $encore-corner-radius-larger: 6px;
 $encore-corner-radius-larger-2: 8px;
 $encore-corner-radius-larger-3: 16px;
 
-$encore-body-font-stack: sm-regular, sans-serif;
+$encore-body-font-stack: SpotifyMixUI, sans-serif;
 $encore-title-font-stack: sm-bold, sans-serif;
 $encore-variable-font-stack: sm-title, sans-serif;
 
